# cvc-platform-deploy

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .vercelignore  ACTIVITY_LOG.md  CLAUDE.md  Dockerfile  ORIENTATION.md  PRODUCT_VISION.md  README.md  STRUCTURE.md  conftest.py  docker-compose.dev.yml  docker-compose.logging.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements.txt  vercel.json
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: security.yml
api/: auth.py  main.py  plugin_loader.py
api/middleware/: ext_api_log.py  rate_limit.py  request_logging.py  security_headers.py  upload_validator.py
api/routes/: admin.py  assignments.py  auth.py  companies.py  config.py  dealflow.py  drive.py  home.py  industrial.py  intelligence.py  keycloak.py  lp.py  meeting_notes.py  mfa.py  news.py  notifications.py  partners.py  portfolio.py  recommendations.py  requests.py  review.py  sales.py  sector_eval.py  shortlists.py  sourcing.py  tasks.py  terminal.py  trend_reports.py
backend/: DEPRECATED.md  manage.py  requirements.txt
backend/api/: main.py  models.py
backend/config/: settings.py  urls.py
chrome-extension/: README.md  background.js  content.css  content.js  manifest.json  popup.html  popup.js
config/: railway.env.example  team.example.json  team.json
config/manifests/: Q2-2026.json
core/: README.md  VOICE.md  __init__.py  config.py  config_loader.py  cvc_config.py  job_logger.py  notifications.py  pyproject.toml  storage.py
core/db/: __init__.py  connection.py  migrate.py
core/db/docs/: TAXONOMY_DATABASE.md
core/db/migrations/: 000_local_bootstrap.sql  001_partner_documents.sql  002_shortlists.sql  003_enrichment.sql  004_build_tasks.sql  005_partners.sql  006_dealflow.sql  007_research_queue.sql  007_task_retry.sql  008_weekly_metrics.sql  013_scoring_enrichment.sql  028_add_linkedin_url.sql  029_industrial_alpha.sql  030_intel_sources.sql  030_partner_intros.sql  031_portfolio_flag.sql  032_normalize_sectors.sql  033_fund_metrics.sql  033_partner_documents.sql  034_partner_terminal_schema.sql  035_partner_advisory_logs.sql  036_partner_service_usage.sql  037_partner_contacts.sql  038_partner_contracts_cascade.sql  039_partner_table_comments.sql  040_partner_issue_comments.sql  041_partner_service_key.sql  042_partner_document_file_data.sql  043_batch_jobs.sql  043_company_intel.sql  043_dd_evaluations.sql  043_industrial_scores_decimal.sql  043_intel_score_suggestions.sql  043_partner_urls.sql  043_skirmish_documents.sql  044_briefing_sources.sql  044b_briefing_sources_seed.sql  045_cron_jobs.sql  046_quickadd_enrichment.sql  047_llm_usage_log.sql  (+100 more)
core/drive/: browse.py  classifier.py  ingestion.py  pipeline.py  sense.py  userauth.py
core/llm/: openrouter.py
core/monitor/: tracker.py
core/pnpbert/: __init__.py  cache.py  engine.py
core/web/: brave.py  proxycurl.py  research.py  scrapling.py
data/: demo_data.sql
data/sql/: verify_portfolio_status.sql
data/test_data/: companies.json  funding_rounds.json  meta.json  partners.json  portfolio.json
designs/figma-dashboard/: DESIGN.md  README.md  package-lock.json  package.json  vercel.json  vite.config.ts
docs/: 4D_TAXONOMY.md  AGENT_ECOSYSTEM.md  ARCHITECTURE_AUDIT_2026_04_28.md  BIGBOSSHOG_BUILD_PROMPT.md  BIGBOSSHOG_PROMPT.md  CVC_INTELLIGENCE_FRAMEWORK.md  DATABASE_SCHEMA.md  DECISIONS.md  DEPLOY_RAILWAY.md  INDUSTRIAL_SCORING.md  INFRASTRUCTURE.md  INTELLIGENCE_LAYER.md  ISO27001_SOC2_GAPS.md  KEYCLOAK_DUPLO.md  PHASE1_BUILD_PLAN.md  PLUGIN_INTERFACE.md  PRODUCT_VISION.md  VISION.md
infra/scripts/: README.md  backup_db.sh
infra/tls/: Caddyfile.example  nginx.conf.example
integrations/: README.md
integrations/google-drive/: .env.example  .gitignore  README.md  app.py  config.py  drive_client.py  requirements.txt  run.sh
mcp/: cvc_api_server.py
onboarding/: DATA_MIGRATION.md  GOLIVE_CHECKLIST.md  SETUP_GUIDE.md  TEAM_INVITE.md  USER_GUIDE.md  sample_companies.csv  sample_partners.csv
scripts/: README.md  diff_portfolio.py  docker_entrypoint.sh  enrich_company_data.py  enrich_company_data_async.py  gdrive_auth.py  import_test_data.py  install.sh  install_plugin.sh  migrate.sh  run_django.sh  run_local.sh  seed_demo.py  smoke_test.sh  warmup_embeddings.py
scripts/ops/: db_check.sh  (+5 more)
tests/: db_integrity.py  smoke_test.py  test_core_features.py  test_drive_oauth.py
workers/: batch_enrichment.py
(+241 files in other folders)
