[project]
name = "cvc-platform"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Core API
    "fastapi==0.136.3",
    "uvicorn[standard]==0.49.0",
    "pydantic==2.13.4",
    "python-multipart>=0.0.27",
    # Database
    "psycopg2-binary==2.9.9",
    # Auth
    "python-jose[cryptography]==3.5.0",
    "bcrypt==5.0.0",
    # HTTP
    "requests>=2.33.0",
    # Config
    "python-dotenv>=1.0.0",
    # Document processing
    "pdfplumber==0.11.9",  # 0.11.9 pins pdfminer-six==20251230 (fixes CVE-2025-64512, CVE-2025-70559)
    "python-docx==1.1.2",
    # Object storage
    "minio==7.2.20",
    # ML / recommendations
    "numpy>=1.26.0",
    "sentence-transformers>=5.5.1",
    # MFA (TOTP / RFC 6238)
    "pyotp>=2.9.0",
    # Upload security — magic-byte MIME detection (ISO 27001 A.8.12 / NIST 3.14)
    "filetype>=1.2.0",
    # Google Drive integration
    "google-auth>=2.40.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.4.0",
    "google-api-python-client>=2.179.0",
    # DD plugin — file conversion
    "markitdown>=0.1.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.5",
    # Django Ninja (parallel backend — incremental FastAPI migration)
    "django>=5.2.15",
    "django-ninja>=1.3",
    "django-cors-headers>=4.9.0",
    "djangorestframework-simplejwt>=5.3",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "basedpyright>=1.20",
    "pytest>=9.0.3",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.basedpyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
include = ["api", "core", "backend"]
# psycopg2-binary stubs don't model RealDictCursor rows as dict-subscriptable —
# ~1100 false positives across all routes. Real type safety enforced by DB schema
# and runtime. Suppress rather than cast 1000+ fetchone() call sites.
reportMissingImports = "none"
reportCallIssue = "none"
reportArgumentType = "none"
reportOptionalSubscript = "none"
reportOptionalMemberAccess = "none"
reportAttributeAccessIssue = "none"
reportIncompatibleMethodOverride = "none"
reportOperatorIssue = "none"
